--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -111,6 +111,21 @@ $NPSInput-Value-width:       (($NPSInput-Value-size + 2*$NPSInput-Value-padding)
         margin-bottom: 15px;
         font-size: 16px;
     }
+    
+    .NPSInput-Form {
+        padding-top: 1em;
+
+        input {
+            width: $NPSInput-Value-width - 100 - 11 - 16;
+            margin-right: 11px;
+            padding: 8px;
+        }
+      
+        button {
+            width: 100px;
+            padding: 8px;
+        }
+    }
 }
 
 @keyframes NPSInput-slidein {
