--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -12,6 +12,7 @@ $NPSInput-Value-padding:             3px;
     border-top: 1px solid #e5e5e5;
     background: #fff;
     box-shadow: 0px -10px 10px rgba(200, 200, 200, 0.08);
+    z-index: 555;
 
     &.animated {
         animation-duration: 2s;
