Allow overriding colors

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -1,6 +1,6 @@
-$NPSInput-Value-color:               #f2f5fd;
-$NPSInput-Value-hover-color:         #3884ff;
-$NPSInput-Value-button-hover-color:  #65a0ff;
+$NPSInput-Value-color:               #f2f5fd !default;
+$NPSInput-Value-hover-color:         #3884ff !default;
+$NPSInput-Value-button-hover-color:  #65a0ff !default;
 $NPSInput-Value-size:                32px;
 $NPSInput-Value-padding:             3px;
 
